--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Yebei Yao's Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -48,12 +48,46 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Yebei Yao / Eliza</h1>
-            <h2>Looking for opportunities as an analyst</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <h1>Hi, I'm Yebei Yao </h1>
+            <!--<h2>姚晔蓓</h2>-->
         </div>
-        <!-- End #lead-content -->
 
+        <div id="lead-content-button">
+
+            <a href="files/YebeiYao Resume upenn.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
+            <a href="files/YebeiYao_portfolio.pdf" target="_blank" class="btn-rounded-white">Download Design Portfolio</a>
+
+        </div>
+
+
+     <div id="lead-content-about">
+        <h2>I design,code and analysis</h2>
+        <p>
+            I graduated from both Urban Spatial Analytics and Landscape Architecture design.I'm good at data analysis and visualization, user interface design and business operations.<br>
+            I have strong project experience in multi-scale design, rural revitalization, and regional planning has trained me to develop a rigorous logic and problem-solving skills in the process of constantly identifying problems, exploring causes and strategies.<br>
+        </p>
+
+       <!--<h2>Contact </h2>
+
+        <div class="contact-icon">
+            <ul>
+                    <a target="_blank"><i class="fa fa-github" aria-hidden="true" ></i> </a>
+                    <h3>Email: yebei0324@outlook.com </h3>
+                    <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> </a>
+                    <h3>Github </h3>
+                    <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <h3>Linkedin </h3>
+            </ul>
+        </div>
+        -->
+
+
+
+
+    </div>
+        <!--
+         End #lead-content -->
+        <div id="lead-overlay-white"></div>
         <div id="lead-overlay"></div>
 
         <div id="lead-down">
@@ -65,85 +99,41 @@
     </div>
     <!-- End #lead -->
 
-    <div id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h2 class="heading">About Me</h2>
-                </div>
-                <div class="col-md-8">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End #about -->
-
-    <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
-        <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-        </div>
-    </div>
-    <!-- End #experience -->
 
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+            <h3>University of Pennsylvania</h3>
+            <span class="education-date">Sept 2021- May 2022</span>
+            <h4>Master of Urban Spatial Analysis<br>
+                GPA:3.67/4.00
+            </h4>
+            <ul>
+                <li>
+                    <b>Main Course: </b>Introduction to Smart Cities, Public Policy Analytics, Spatial Statistics & Data Analysis, Land Use and Environmental Modeling, Arduino Sensing the City, Java Script and Programming for Planners & Designers, Geospatial Cloud Computing, Law of Urban Planning
+                </li>
+
+            </ul>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Beijing Forestry University</h3>
+            <span class="education-date">Sept 2014 - June 2023</span>
+            <h4>B.S. & Master of Landscape Architecture<br>
+                GPA:3.80/4.00</h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    <b>Main Course: </b> Landscape Urbanism, Metropolis Development, Remote Sensing, Ecological Renovation, Green Urban Infrastructure, Construction Gardening, Wilderness Recreation Management, Wetland Restoration Design, Eco-tourism.
                 </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
+
             </ul>
         </div>
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
+
+
 
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
@@ -151,15 +141,16 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/NYCMAP.png" width="330" height="270"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Spacial-Temperal Taxi Trip Analysis in New York</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="files/YebeiYao_NYC_taxitrip_analysis_report.pdf" target="_blank">View Project</a>
+
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -167,15 +158,91 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/ezgif-1-d0f986f0b4.gif" width="330" height="270"/>
+
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Sensing Urban Water Quality - Using Arduino Sensors </h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://www.sensingthecity.com/schuylkill-sensors/" target="_blank" >View Overall Project</a>
+                        <a href="files/Finalslides-skukillriver.pdf" target="_blank" >View Design</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/tripapp.jpg" width="330" height="270"/>
+
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Rocky Mountain National Park - Trip Advisor Application </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        </p>
+                        <a href="https://anran0716.github.io/musa-611-final/page1-Cover-y.html" target="_blank" >View Overall Project</a>
+
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/houseprice.jpg" width="330" height="270"/>
+
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Predicting house price in Boulder County, Colorado</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        </p>
+
+                        <a href="files/alpha_bowl_1031.html" target="_blank" >View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/pittsburgh.jpg" width="330" height="270"/>
+
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Urban Sprawl Analysis in Pittsburg, Pennsylvania</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        </p>
+
+                        <a href="files/alpha_bowl_1031.html" target="_blank" >View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/metaverse.jpg" width="330" height="270"/>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Research on Metaverse Application</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        </p>
+                        <a href="files/Metaverse application in tourist industry.pdf" target="_blank" >View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -185,35 +252,60 @@
     </div>
     <!-- End #projects -->
 
+
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Internship</h2>
+        <div id="experience-timeline">
+            <div data-date="Nov. 2022 – Feb. 2023">
+                <h3>Deloitte - Management Consulting</h3>
+                <h4>Marketing & Commerce Department</h4>
+                <h4>Business Analysis Intern</h4>
+            </div>
+
+            <div data-date="Aug. 2022 – Nov. 2022">
+                <h3>Accenture</h3>
+                <h4>Strategy & Management Consulting</h4>
+                <h4>Intern</h4>
+            </div>
+
+            <div data-date="Jul. 2022 – Aug. 2022">
+                <h3>Roland Berger</h3>
+                <h4>Part-Time Assistant</h4>
+            </div>
+
+            <div data-date="Jun. 2022 – Aug. 2022">
+                <h3>Holee Trading LLC, NYC</h3>
+                <h4>Analyst Intern</h4>
+            </div>
+
+            <div data-date="Jul. 2019 – Jul. 2021">
+                <h3>Professor Li’s Studio of the Beijing Forestry University</h3>
+                <h4>Research Assistant</h4>
+            </div>
+        </div>
+    </div>
+    <!-- End #experience -->
+
+
+
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
+            <li>Rstudio</li>
+            <li>MySQL</li>
+            <li>ArcGIS</li>
+            <li>QGIS</li>
+            <li>PostgreSQL</li>
             <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+        </ul>
+        <ul>
+           <li>Photoshop</li>
+            <li>Adobe Illustrator</li>
+            <li>Premier Pro</li>
+            <li>After Effect</li>
+            <li>Axure</li>
+            <li>Figma</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -221,7 +313,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="yebei0324@outlook.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
@@ -237,7 +329,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2023</span> Yebei Yao
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -245,28 +337,7 @@
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
                 </div>
-                <div class="col-sm-5 social">
-                    <ul>
-                        <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
-                    </ul>
-                </div>
+
             </div>
         </div>
     </footer>
