--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="project-info">
                         <h3>Spacial-Temperal Taxi Trip Analysis in New York</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Analyzed the taxi travel demand in New York across space and time, visualized the mobility pattern, built ML model to help taxi vendors to better allocate appropriate number of taxis spatially in advance. Solved problems of traffic congestion and unbalanced supply & demand relationship
                         </p>
                         <a href="files/YebeiYao_NYC_taxitrip_analysis_report.pdf" target="_blank">View Project</a>
 
@@ -165,7 +165,7 @@
                     <div class="project-info">
                         <h3>Sensing Urban Water Quality - Using Arduino Sensors </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                           Created a water sensing and evaluation system. Assembled Arduino sensor set and its IDE platform to collect water quality data like turbidity and precipitation. Created indicators and built an evaluation scoring system, integrated the device into urban infrastructure for better interaction.
                         </p>
                         <a href="https://www.sensingthecity.com/schuylkill-sensors/" target="_blank" >View Overall Project</a>
                         <a href="files/Finalslides-skukillriver.pdf" target="_blank" >View Design</a>
@@ -183,7 +183,7 @@
                     <div class="project-info">
                         <h3>Rocky Mountain National Park - Trip Advisor Application </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                           A Trip Recommandation application about Rocky Mountain National Park, here is the best route that fits your needs at most!
                         </p>
                         <a href="https://anran0716.github.io/musa-611-final/page1-Cover-y.html" target="_blank" >View Overall Project</a>
 
@@ -203,8 +203,7 @@
                     <div class="project-info">
                         <h3>Predicting house price in Boulder County, Colorado</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
+                           Using RStudio to clean and wrangle 11,300 house price record data in Boulder County, based on census tract units, found the key variables that affect house price most, explored the spatial layout pattern using linear regression models. Spatial join demographic, economic characteristics, infrastructure density and house attributes to each record, found the natural resource and transpiration system impacts house price at most.     </p>
 
                         <a href="files/alpha_bowl_1031.html" target="_blank" >View Project</a>
                     </div>
@@ -222,8 +221,7 @@
                     <div class="project-info">
                         <h3>Urban Sprawl Analysis in Pittsburg, Pennsylvania</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
+                            Based on development performance history in 2009-2019, forecasted Pittsburgh’s urban sprawl condition in 2029 with ML model (with accuracy of 92%); Proposed prospective resource allocation strategies in next ten years, fully considering ecological, economical, regional integration, etc.,     </p>
 
                         <a href="files/Pittsburgh_UrbanGrowth_Analysis_YebeiYao.pdf" target="_blank" >View Project</a>
                     </div>
@@ -240,7 +238,7 @@
                     <div class="project-info">
                         <h3>Research on Metaverse Application</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                         Report about the potential application of metaverse in tourist industry. Diagrams about the background, solution and risks.  The key finding of metaverse is that it's the most advanced combination between virtual and real world, whoever creates the best immersive experience will win.
                         </p>
                         <a href="files/Metaverse application in tourist industry.pdf" target="_blank" >View Project</a>
                     </div>
