--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
                 </div>
                 <!-- End .project -->
 
+
+               
+
+
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/ezgif-1-d0f986f0b4.gif" width="330" height="270"/>
@@ -229,6 +234,22 @@
                 </div>
                 <!-- End .project -->
 
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/TIANGONG.png" width="330" height="270"/>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Village revitalization based on low impact concept</h3>
+                        <p>
+                           Building a Natural Museum Building, Gold Medal of  "Tian Gong Zhi Cheng" Cup, Suichang Shimuyan Area, Rural Revitalization Design Competition.
+                        </p>
+                        <a href="files/天工之城.pdf" target="_blank">View Project</a>
+
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
 
                 <div class="project shadow-large">
                     <div class="project-image">
