--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <div class="project-info">
                         <h3>Predicting house price in Boulder County, Colorado</h3>
                         <p>
-                           Using RStudio to clean and wrangle 11,300 house price record data in Boulder County, based on census tract units, found the key variables that affect house price most, explored the spatial layout pattern using linear regression models. Spatial join demographic, economic characteristics, infrastructure density and house attributes to each record, found the natural resource and transpiration system impacts house price at most.     </p>
+                           Using RStudio to clean and wrangle 11,300 house price record data in Boulder County, based on census tract units, found the key variables that affect house price most, explored the spatial layout pattern using linear regression models. found the natural resource and transpiration system impacts house price at most.     </p>
 
                         <a href="files/alpha_bowl_1031.html" target="_blank" >View Project</a>
                     </div>
